# autonomous_navigation_stack

./: .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile
localization/: ekf_config.yaml  ekf_localization.cpp  ekf_localization.hpp  ekf_log.csv  test_ekf.cpp
perception/lane_detection/: lane_detector.cpp  lane_detector.hpp  video_runner.cpp
perception/object_detection/: detector.py
planning/: fsm_log.csv  fsm_planner.cpp  fsm_planner.hpp  fsm_plotter.py  full_trajectory.json  full_trajectory_plotter.py  obstacles.json  test_fsm.cpp  test_trajectory.cpp  trajectory.json  trajectory_generator.cpp  trajectory_generator.hpp  trajectory_plotter.py  trajectory_selector.cpp
visualization/: ekf_plot.py
